2010-02-03  John W. Eaton  <jwe@octave.org>

	* file-ops.cc (canonicalize_file_name):
	Don't pass current directory to octave_env::make_absolute.
	* cmd-edit.cc (do_decode_prompt_string): Likewise.

	* oct-env.h (octave_env::get_current_directory):
	Rename from octave_env::getcwd.
	(octave_env::make_absolute): Provide default value for second arg.

	* lo-sysdep.cc (octave_getcwd): Assume we are using gnulib
	getcwd module.

2010-02-02  John W. Eaton  <jwe@octave.org>

	* oct-time.h: Include <ctime>, not "systime.h".
	* oct-time.cc: Include <strftime.h>, not "strftime.h".
	Don't include <windows.h>.

	* systime.h: Delete.
	* Makefile.am (INCS): Remove it from the list.

2010-02-02  John W. Eaton  <jwe@octave.org>

	* lo-utils.h, lo-cutils.c (oct_strptime): Delete.
	* oct-time.cc (octave_strptime::init): Call strptime, not oct_strptime.

2010-01-28  Jaroslav Hajek  <highegg@gmail.com>

	* dMatrix.cc (Matrix::determinant): Treat matrices marked as singular
	normally.
	* fMatrix.cc (FloatMatrix::determinant): Ditto.
	* CMatrix.cc (ComplexMatrix::determinant): Ditto.
	* fCMatrix.cc (FloatComplexMatrix::determinant): Ditto.

2010-01-26  John W. Eaton  <jwe@octave.org>

	* file-ops.cc: Don't tag functions with OCTAVE_API in source file.

2010-01-26  John W. Eaton  <jwe@octave.org>

	* lo-cutils.c, lo-utils.h (octave_link, octave_symlink,
	octave_readlink, octave_mkdir, octave_mkfifo, octave_rmdir,
	octave_rename, octave_tempnam, octave_umask, octave_unlink):
	Delete.
	* file-io.h, file-io.cc (octave_mkdir,  octave_mkfifo,
	octave_link, octave_symlink, octave_readlink, octave_rename,
	octave_rmdir, octave_recursive_rmdir, octave_umask,
	octave_unlink, octave_tempnam): Rename from file_ops::X to
	octave_X.  Change all uses.
	(file_ops::static_members): Incorporate directly into file_ops class.

2010-01-23  John W. Eaton  <jwe@octave.org>

	* Makefile.am (LIBOCTAVE_C_SOURCES): Remove oct-getopt.c from the list.
	(LIBOCTAVE_CXX_SOURCES): Remove prog-args.c from the list.